--- a/src/package.json
+++ b/src/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "child_process": "^1.0.2",
+    "diff": "^8.0.3",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tar": "^7.5.4"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
